[tool.poetry]
name = "testing-html"
version = "0.1.0"
description = ""
authors = ["Jim Brännlund <jimbrannlund@fastmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
pytest-html = {path = "../pytest-html", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
